# rlqp-isye6679

./: CMakeLists.txt  Makefile  README.md  build_cuda.config  build_cuda.sh  cuda.sbatch  debug_script.gdb  my_osqp
build_cuda/: CMakeCache.txt
include/: CMakeLists.txt  errs.h  kernels.h  problem.h  setup.h
src/: CMakeLists.txt  kernels.cu  problem.cu  setup.cpp
test/: CMakeLists.txt
test/basic_qp/: generate_problem.py  run.pbs  run.sbatch
test/my_test/: maintest.cpp
